Updated the AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
 Yasir Musa <baydreafrica@gmail.com>
+Jessica Chidera Ogu <ogujessica3@gmail.com>
